fix overflow problem

--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+html, body {
+  height: auto;
+  display: flex;
+}
+
 body {
   margin: 0;
   display: grid;
-  height: 100vh;
-  background-position: center;
   background-color: black;
 }
 
@@ -15,15 +18,29 @@ body {
 }
 
 #background {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: -1;
   object-fit: cover;
   margin: 0;
-  position: fixed;
   background-position: center;
+  position: absolute;
   opacity: 0.5;
 }
+
+/* #background::before {
+  content: ' ';
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: white;
+  background: url('image/background.jpeg') no-repeat center center;
+  background-size: cover;
+  will-change: transform;
+  z-index: -1;
+} */
 
 #myImg {
     width: 100%;
@@ -76,8 +93,9 @@ body {
   flex: auto;
   justify-content: space-evenly;
   align-items: center;
-  flex-wrap: wrap;
   margin-top: 30px;
+  overflow:auto;
+
 }
 
 .middle-div {
